enlightenment-wm: cosmetic changes

--- a/openports/enlightenment-wm/pkg/README
+++ b/openports/enlightenment-wm/pkg/README
@@ -1,3 +1,7 @@
++-----------------------------------------------------------------------
+| Running ${PKGSTEM} on OpenBSD
++-----------------------------------------------------------------------
+
 Enlightenment need to increase resource limits to successfull run. At least:
 -openfiles-max=2048
 -openfiles-cur=1024
