--- a/pkgsrc/chromium/TODO
+++ b/pkgsrc/chromium/TODO
@@ -1,7 +1,13 @@
 To Do:
 
-service/device/hid support: OpenBSD way
--pkgsrc: libfido2 (available)
--pkgsrc: libudev (port libudev-openbsd?)
+1) If pulseaudio not run, chromium can't start it, so no sound:
+VERBOSE1:pulse_util.cc(261)] Failed to connect to the context. Error: Connection refused
+WARNING:audio_manager_linux.cc(53)] Falling back to ALSA for audio output. PulseAudio is not available or could not be initialized.
 
+If pulseaudio already started, chromium can join it, and has sound.
+This is the workaround, see the files/chrome launch wrapper.
 
+NOTE: OpenBSD (of course), FreeBSD and DragonFly use sndio as default.
+
+2) HID doesn't work on NetBSD.
+NOTE: For this OpenBSD uses fido and libudev-openbsd, FreeBSD uses devd.
